changed my about photo

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Me</a></li>
-                <li><a href="#">Skills</a></li>
                 <li><a href="#">Projects</a></li>
+                <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
             <a href="#" class="btn">Subscribe</a>
@@ -32,7 +32,7 @@
         <div class="content">
             <h4>Hello, my name is</h4>
                 <h1>Ty <span>Stucki</span></h1>
-                    <h3>I am a Full-Stack Web Developer</h3>
+                    <h3>I am a Full-Stack Web Developer, Creator, and Puppy Parent</h3>
                     <div class="newsLetter">
                         <form>
                             <input type="email" name="email" id="mail" placeholder="Enter Your Email">
@@ -48,12 +48,12 @@
 
     <section class="about">
         <div class="main">
-            <img src="https://lh3.googleusercontent.com/pw/AL9nZEWRP5RGGYZjXnpJdpSmaZSOiSs-U3PAhmJUI6N91OuH1eHkzZziV-yuqJ65C8KoGitbvXz99n226GSEaoP_JrkB_4mvAkoQjRD2kjpBIFkq49f9yC1jon8UW4IhWR3sJET23WrqpVRObTxCUhXYbbzP6BbbsTJLo9G-WHG-z--43iNE63UKjCPyv0g3kdzR2ZwA3z1tatgBaqnTFAviyGTKh3KkxBYsP4uokhR_FOyEK0KA6lV40qRqtaBd-UMYsGZ13ZqJKkCm_2Ez1FcZdC9zqkSCpn92gM5f650J_MEmqIc5U0_XypW4yYidILiUpfPX5BNqTvBkNJkRSbZQmQHDL778BXN7Mbx6SCEiiUgbVeBObEGNDHhoP2FsJetLUqRfDvzThkwrrezbXlF5XB5t3Xz_boJbvc0L1kFiyL9ZWAAY3120CGQ5_iUkt_PHzaveUsHJl8eezqNIm_fi4PYoYNGz_N93lQLH5N1k2exCdnKKzEwU9QyUIcZb0g97KnDwCWXyhp883j7c-QD1siBEhhK1cg5N5Eq-OUdfcGFBxXLtWtT4GJm4WeWkfzaZgb17sD-k3rMuqX22kW1_oRD2cyvgHDPbHck9JFRLtDco89oGzpJ9-_LwiR6H9T3ALGq_PtSGIMUP2Taqe7xwv9jY1ouDyLOj5d5C46gARd9eeTMPQEbcv2qfD8gq5VkAlsPu1vHXh0nIPlsUPo-cGIWb5H1iG7B3lTgUFKJz549Fopaeo-8YxGP3Urk064fqMylytP7_P_tgLu-BxCTt6AlWqgJMTtO6dcq_0mC2MSjmRSx5YZqf2OAkWuiX3tH53UP_Ky80ddDSXcm1pd9T98qdGUQuE4szYGfMNLBDdDa9VWl5ntBcHUCztCLM--V8hdfH4pvXg2lPEPTdMQ7t9P0yROfEUC4Y8O54rAdTIkwNPOgl_A86b5Vzw_m0Wg=w166-h221-no?authuser=0">
+            <img src="https://lh3.googleusercontent.com/UnIG2NQG5xmMJbIDrU26eGOx9SwaWTjf0O6nK3Tw2hxg3u_VpoDVx7Yq_IjHMQzWqWzF0w9L6SQ9n7AAvRY23Y8NiJw11CewLh5vP4zMoc6zPWf4G7Eo0Puj03yKzVmZaFExE7KleSn6RwG9hj9xkfA4ICc0wqsiBH9NNf73f3ZU9MMjRg5LhDGvsnnQxESvAK51BdWWfEzsDn0LGdZHk0YsUNaxMm0X7GS1KOOkJQmctLcKrlUWipe1_0KbCcaAJjMcLm8SY4gIs5SJsQgFX5HHOKRLjgO4LJWGVQ40_MVn5fygDQ2CULRXdGTXud00X-albDUiDnV5svFEqCp3N7NnovsMxXL4Iq924wyaw1ptTqLvNa7fY58oT8YSWC2BAFIE-ZQRwlY_l55bwcVTqVJRDGbdB8JZpaiLalOLjxOsxRqdWZbkN8rWLyTH3_sdWnviF1DJjBua1N0HqwtoTZoQcQkNgCfOv0VOAreo0_GPA13h5rxrLcPMFoyEuqTW7JrDWTbceOSqO-4mkULsmUJHYl5eMXerQatX5-y8vLk16nlHO-dE6BP4uya0RR_p77-oLmVdyaK0zpAFhXARLIBTLxrFYaA6sdo-QiBefGbspCYOSn8t2J7VKX0nfMOBvsAiD45hL69ZLX9OaU4okx2zuEz9QFc1_Y3B9rcWFrgPbVs7vqF7YcVkd5_F00d6Av0cg28BO8ftttIyEuyIF9wG9pGpTU4CWRCzEMxyskF9EjF94o4GTQ-v8BJ5ORZKxSoI4vtl3rrcbvJJCBjmR4cH1wGxf74cRc5Z36C49KHgFDEXoObHJt0VT-Y3fdOJSsu6MCLu1ThOLQJF9VnGdQTv8P13MQU6ci8AxsG9rqAXWpC3avfF9uu1Y8CmrH2eZGlPwtqxnI2aa8PQpET_uUpzBotsPBU-hT4ELQ=w512-h488-no?authuser=0">
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5>Full-Stack Developer</h5>
                 <p>
-                    My passion for coding came from my time that I spent at DevMountain, where I was able to collaberate with other developers all around the world. I specialize in Web Development and enjoy building websites and pushing myself by adding new skills to my coding-stack.
+                    My passion for coding came from my time that I spent at DevMountain, where I was able to collaberate with other developers from all around the world. I specialize in Web Development and enjoy building websites and pushing myself by adding new skills to my coding-stack.
                 </p>
                 <br>
                 <p>Outside of coding, I enjoy riding dirtbikes, traveling the world and spending time with my girlfriend and our puppy.</p>
@@ -130,7 +130,8 @@
             <a href="#"><i class="fa-brands fa-square-github"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
         </div>
-        <p class="end">CopyRight by Ty Stucki</p>
+        <br>
+        <p class="end">&#169; 2022 Ty Stucki, All Rights Reserved</p> 
     </footer>
 </body>
 </html>
