changed font colors to look better on macOS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <h2 class="logo">TS<span>MEDIA</span></h2>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Skills</a></li>
@@ -36,7 +36,7 @@
                     <div class="newsLetter">
                         <form>
                             <input type="email" name="email" id="mail" placeholder="Enter Your Email">
-                            <input type="submit" name="submit" value="Lets Start">
+                            <input type="submit" name="submit" value="Lets Talk">
                         </form>
                     </div>
         </div>
@@ -126,9 +126,9 @@
     <footer>
         <p>Ty Stucki</p>
         <div class="social">
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-square-github"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/ty-stucki-ab0b25228/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/tystucki" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+            <a href="https://www.instagram.com/tystucki1/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         </div>
         <br>
         <p class="end">&#169; 2022 Ty Stucki, All Rights Reserved</p> 
