added my wordle clone video

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,8 @@
 
             <div class="projectCard">
                 <h5>Wordle Clone</h5>
+                <iframe class="wordleCloneVideo" title="Youtube video player" height="375" width="625" src="https://www.youtube.com/embed/d3UUznpvxiM"></iframe>
+
             </div>
         </div>
     </section>
