changed file name

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">About Me</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="mailto:tyloganstucki@gmail.com" target="_blank">Contact Me</a></li>
             </ul>
             <a href="#" class="btn">Subscribe</a>
         </nav>
@@ -58,7 +58,7 @@
                 <br>
                 <p>Outside of coding, I enjoy riding dirtbikes, traveling the world and spending time with my girlfriend and our puppy.</p>
                 <br>
-                <button type="button">Let's Talk </button>
+                <button type="button" >Find out more! </button>
             </div>
         </div>
     </section>
@@ -122,7 +122,7 @@
 
     <div class="contact-me">
         <p>Let get in contact</p>
-        <a class="button-two" href="#">Contact Me</a>
+        <a class="button-two" href="mailto:tyloganstucki@gmail.com">Contact Me</a>
     </div>
 
     <!-- footer -->
@@ -132,6 +132,7 @@
             <a href="https://www.linkedin.com/in/ty-stucki-ab0b25228/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/tystucki" target="_blank"><i class="fa-brands fa-square-github"></i></a>
             <a href="https://www.instagram.com/tystucki1/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:tyloganstucki@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i> </a>
         </div>
         <br>
         <p class="end">&#169; 2022 Ty Stucki, All Rights Reserved</p> 
